# Magpie

./: AddGhLog.cs  ApiCredentialStore.cs  ChatMessageHelpers.cs  ChatWindow.AgentReferences.cs  ChatWindow.AgentRouting.cs  ChatWindow.AgentSkills.cs  ChatWindow.Attachments.cs  ChatWindow.CanvasHost.cs  ChatWindow.CanvasUndo.cs  ChatWindow.ChatRendering.cs  ChatWindow.CodeViewSyntax.cs  ChatWindow.GhTools.Execution.cs  ChatWindow.HostBridge.cs  ChatWindow.HostBridgeServer.cs  ChatWindow.ImageWorkflow.cs  ChatWindow.LlmTransport.cs  ChatWindow.PlanSteps.cs  ChatWindow.ReferenceOptions.cs  ChatWindow.RuntimeConfig.cs  ChatWindow.SelfTraining.cs  ChatWindow.SkillTools.cs  ChatWindow.ToolDefinitions.cs  ChatWindow.ToolDispatch.AsyncHandlers.cs  ChatWindow.ToolDispatch.CanvasHandlers.cs  ChatWindow.ToolDispatch.Helpers.cs  ChatWindow.ToolDispatch.InteractiveHandlers.cs  ChatWindow.ToolDispatch.LookupHandlers.cs  ChatWindow.ToolDispatch.Models.cs  ChatWindow.ToolDispatch.ReferenceSkillHandlers.cs  ChatWindow.ToolDispatch.ScriptHandlers.cs  ChatWindow.ToolDispatch.StateHandlers.cs  ChatWindow.ToolDispatch.SyncHandlers.cs  ChatWindow.ToolDispatch.cs  ChatWindow.VisualWorkflow.cs  ChatWindow.WebResearch.cs  ChatWindow.cs  DeploymentOptions.cs  GrasshopperHost.cs  Magpie.csproj  Magpie.sln  (+5 more)
agent_service/: .env  .env.example  README.md  __init__.py  pyproject.toml
agent_service/app/: __init__.py  config.py  container.py  context_store.py  dependencies.py  host_bridge.py  logging_utils.py  main.py  middleware.py  response_models.py  runtime.py  schemas.py  task_store.py  tools.py  (+1 more)
(+67 files in other folders)
