[project]
name = "magpie-agent-service"
version = "0.1.0"
description = "External agent service for Magpie"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langchain>=1.0.0",
  "langchain-openai>=0.3.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

